提交mock数据，其中roadhog-api-doc只用到一个util文件，所以我把这个文件单独拷贝过来使用

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/xiaohuoni/umi-antd-pro#readme",
   "devDependencies": {
+    "mockjs": "^1.0.1-beta3",
+    "moment": "^2.22.1",
     "umi-plugin-routes": "^0.1.2"
   },
   "dependencies": {
