--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "react-router-breadcrumbs-hoc": "^2.1.0",
-    "react-transition-group": "^2.3.1"
+    "react-transition-group": "^2.3.1",
+    "umi": "^1.2.2",
+    "umi-plugin-dva": "*"
   }
 }
