--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   },
   "homepage": "https://github.com/xiaohuoni/umi-antd-pro#readme",
   "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.1",
     "umi-plugin-routes": "^0.1.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.46",
+    "enquire-js": "^0.2.1",
     "react-document-title": "^2.0.3",
     "react-router-breadcrumbs-hoc": "^2.1.0",
     "react-transition-group": "^2.3.1",
