--- a/package.json
+++ b/package.json
@@ -30,8 +30,15 @@
     "umi-plugin-routes": "^0.1.2"
   },
   "dependencies": {
+    "@antv/data-set": "^0.8.7",
     "@babel/polyfill": "^7.0.0-beta.46",
+    "bizcharts": "^3.1.5",
+    "bizcharts-plugin-slider": "^2.0.3",
     "enquire-js": "^0.2.1",
+    "lodash-decorators": "^5.0.0",
+    "numeral": "^2.0.6",
+    "rc-drawer-menu": "^0.5.7",
+    "react-container-query": "^0.11.0",
     "react-document-title": "^2.0.3",
     "react-router-breadcrumbs-hoc": "^2.1.0",
     "react-transition-group": "^2.3.1",
