--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "rc-drawer-menu": "^0.5.7",
     "react-container-query": "^0.11.0",
     "react-document-title": "^2.0.3",
+    "react-fittext": "^1.0.0",
     "react-router-breadcrumbs-hoc": "^2.1.0",
     "react-transition-group": "^2.3.1",
     "rollbar": "^2.3.9",
