--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "umi dev",
+    "start:no-proxy": "cross-env NO_PROXY=true umi dev",
     "build": "umi build",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint"
@@ -27,16 +28,19 @@
   "devDependencies": {
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.1",
-    "umi-plugin-routes": "^0.1.2"
+    "umi-plugin-routes": "^0.1.2",
+    "cross-env": "^5.1.4"
   },
   "dependencies": {
     "@antv/data-set": "^0.8.7",
     "@babel/polyfill": "^7.0.0-beta.46",
+    "antd-pro-server": "^1.0.0",
     "bizcharts": "^3.1.5",
     "bizcharts-plugin-slider": "^2.0.3",
     "enquire-js": "^0.2.1",
     "lodash-decorators": "^5.0.0",
     "numeral": "^2.0.6",
+    "oni-delay": "^1.0.2",
     "rc-drawer-menu": "^0.5.7",
     "react-container-query": "^0.11.0",
     "react-document-title": "^2.0.3",
