--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "umi example with ant design pro",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "umi dev",
-    "start:no-proxy": "cross-env NO_PROXY=true umi dev",
+    "start": "cross-env HARD_SOURCE=none umi dev",
+    "start:no-proxy": "cross-env MOCK=none umi dev",
     "build": "umi build",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint"
@@ -26,10 +26,13 @@
   },
   "homepage": "https://github.com/xiaohuoni/umi-antd-pro#readme",
   "devDependencies": {
+    "cross-env": "^5.1.4",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.1",
-    "umi-plugin-routes": "^0.1.3",
-    "cross-env": "^5.1.4"
+    "umi": "1.3.3",
+    "umi-plugin-dll": "^0.2.1",
+    "umi-plugin-dva": "^0.7.2",
+    "umi-plugin-routes": "0.1.4"
   },
   "dependencies": {
     "@antv/data-set": "^0.8.7",
@@ -48,8 +51,6 @@
     "react-router-breadcrumbs-hoc": "^2.1.0",
     "react-transition-group": "^2.3.1",
     "rollbar": "^2.3.9",
-    "umi": "^1.3.1",
-    "umi-plugin-dva": "^0.7.1",
     "url-polyfill": "^1.0.13"
   }
 }
