add umi-plugin-polyfill add zh_CN

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "rules": {
     "require-yield": 1,
     "no-extend-native": 0,
-    "jsx-a11y/href-no-hash":0
+    "jsx-a11y/href-no-hash": 0,
+    "react/no-deprecated": 0
   }
 }
