--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "umi example with ant design pro",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env HARD_SOURCE=none COMPILE_ON_DEMAND=none umi dev",
-    "start:noharesource": "cross-env HARD_SOURCE=none COMPILE_ON_DEMAND=none umi dev",
-    "start:debug": "cross-env DEBUG=umi*,af-webpack* HARD_SOURCE=none COMPILE_ON_DEMAND=none umi dev",
+    "start": "cross-env HARD_SOURCE=none  umi dev",
+    "start:noharesource": "cross-env HARD_SOURCE=none umi dev",
+    "start:debug": "cross-env DEBUG=umi*,af-webpack* HARD_SOURCE=none umi dev",
     "start:no-proxy": "cross-env MOCK=none umi dev",
     "build": "umi build",
     "lint": "eslint --ext .js src test",
@@ -31,11 +31,8 @@
     "cross-env": "^5.1.4",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.1",
-    "umi": "1.3.4",
-    "umi-plugin-dll": "^0.2.1",
-    "umi-plugin-dva": "^0.7.3",
-    "umi-plugin-routes": "0.1.4",
-    "umi-plugin-polyfill": "^0.1.0"
+    "umi": "^2.0.3",
+    "umi-plugin-react": "^1.0.3"
   },
   "dependencies": {
     "@antv/data-set": "^0.8.7",
