--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-fittext": "^1.0.0",
     "react-media": "^1.9.2",
     "umi": "^3.0.6",
+    "umi-plugin-authorize": "^2.0.0",
     "umi-request": "^1.2.11"
   },
   "devDependencies": {
