--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@alitajs/router": "^2.1.7",
     "@alitajs/routes": "^2.1.7",
+    "@alitajs/tabs-layout": "^2.0.0",
     "@antv/data-set": "^0.10.2",
     "@umijs/preset-react": "^1.4.2",
     "antd": "^3.26.0",
@@ -83,7 +84,7 @@
     "react-fittext": "^1.0.0",
     "react-media": "^1.9.2",
     "umi": "^3.0.6",
-    "umi-plugin-authorize": "^2.0.0",
+    "umi-plugin-authorize": "^2.0.1",
     "umi-request": "^1.2.11"
   },
   "devDependencies": {
@@ -126,8 +127,7 @@
     "stylelint-order": "^2.0.0",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
-    "tslint-react": "^3.6.0",
-    "umi-plugin-ga": "^1.1.3"
+    "tslint-react": "^3.6.0"
   },
   "optionalDependencies": {
     "puppeteer": "^1.12.1"
