--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
-    "build": "umi build",
+    "build": "cross-env ANT_DESIGN_PRO_ONLY_DO_NOT_USE_IN_YOUR_PRODUCTION=site umi build",
     "docker-hub:build": "docker build  -f Dockerfile.hub -t  ant-design-pro ./",
     "docker-prod:build": "docker-compose -f ./docker/docker-compose.yml build",
     "docker-prod:dev": "docker-compose -f ./docker/docker-compose.yml up",
@@ -51,9 +51,9 @@
     "not ie <= 10"
   ],
   "dependencies": {
-    "@alitajs/router": "^2.1.7",
-    "@alitajs/routes": "^2.1.7",
-    "@alitajs/tabs-layout": "^2.0.0",
+    "@alitajs/router": "^2.2.3",
+    "@alitajs/routes": "^2.2.3",
+    "@alitajs/tabs-layout": "^2.2.3",
     "@antv/data-set": "^0.10.2",
     "@umijs/preset-react": "^1.4.2",
     "antd": "^3.26.0",
