feat: runtime change theme

--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "not ie <= 10"
   ],
   "dependencies": {
-    "@alitajs/router": "^2.2.3",
-    "@alitajs/routes": "^2.2.3",
-    "@alitajs/tabs-layout": "^2.2.3",
+    "@alitajs/plugin-theme": "^0.0.2",
+    "@alitajs/router": "^2.7.4",
+    "@alitajs/routes": "^2.7.4",
+    "@alitajs/tabs-layout": "^2.7.4",
     "@antv/data-set": "^0.10.2",
     "@umijs/preset-react": "^1.4.2",
     "antd": "^3.26.0",
@@ -83,6 +84,7 @@
     "react-dom": "^16.7.0",
     "react-fittext": "^1.0.0",
     "react-media": "^1.9.2",
+    "react-router-config": "^5.1.1",
     "umi": "^3.0.6",
     "umi-plugin-authorize": "^2.0.1",
     "umi-request": "^1.2.11"
